이거진짜왜이러냐

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 /exportToHTML/
 data/adiga_2025_admission_results_final.csv
 data/departments.csv
-main.exe
+/latest/node_modules
+/latest/node_modules/.bin
