Move universities.db to data directory and update references
Relocated universities.db to data/universities.db, updated .gitignore, dataSources.xml, and code references accordingly. Also removed the obsolete help.py script.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ data/adiga_2025_admission_results_final.csv
 data/departments.csv
 /latest/node_modules
 /latest/node_modules/.bin
+data/universities.db
